--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,78 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -86,13 +11,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #000;
+  background: #fff;
 }
 
 a {
@@ -100,8 +20,111 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@font-face {
+  font-family: "Helvetica_Regular";
+  src: url("../assets/fonts/HelveticaNowDisplay-Regular.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Helvetica_light";
+  src: url("../assets/fonts/HelveticaNowDisplay-Light.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Helvetica_medium";
+  src: url("../assets/fonts/HelveticaNowDisplay-Medium.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Helvetica_thin";
+  src: url("../assets/fonts/HelveticaNowDisplay-Thin.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "Helvetica_bold";
+  src: url("../assets/fonts/HelveticaNowDisplay-Bold.ttf") format('truetype');
+}
+
+.Helvetica_Regular {
+  font-family: 'Helvetica_Regular';
+}
+
+.Helvetica_light {
+  font-family: 'Helvetica_light';
+}
+
+.Helvetica_medium {
+  font-family: 'Helvetica_medium';
+}
+
+.Helvetica_thin {
+  font-family: 'Helvetica_thin';
+}
+
+.Helvetica_bold {
+  font-family: 'Helvetica_bold';
+}
+
+.pad-15 {
+  padding: 10% 0%;
+}
+
+.pad-5 {
+  padding: 5% 0%;
+}
+
+.text_165 {
+  font-size: clamp(3.8125rem, 1.75rem + 5.3125vw, 8.125rem);
+  line-height: clamp(3.625rem, 1.5625rem + 5.3125vw, 7.9375rem);
+}
+
+.text-95 {
+  font-size: clamp(2.9375rem, -0.1771rem + 5.0955vw, 5.9375rem);
+}
+
+.text-75 {
+  font-size: clamp(1.875rem, 1.5rem + 1.875vw, 3.75rem);
+  line-height: clamp(2rem, 1.625rem + 1.875vw, 3.875rem);
+}
+
+.text-65 {
+  font-size: clamp(1.5625rem, 1.3125rem + 1.25vw, 2.8125rem);
+}
+
+.text-44 {
+  font-size: clamp(1.375rem, 1.275rem + 0.5vw, 1.875rem);
+  line-height: clamp(1.875rem, 1.8rem + 0.375vw, 2.25rem);
+  ;
+}
+
+.text-34 {
+  font-size: clamp(1.1875rem, 1.0875rem + 0.5vw, 1.6875rem);
+  line-height: clamp(1.875rem, 1.8rem + 0.375vw, 2.25rem);
+}
+
+.text-36 {
+  font-size: clamp(1.25rem, 1.15rem + 0.5vw, 1.75rem);
+  line-height: clamp(1.5625rem, 1.425rem + 0.6875vw, 2.25rem);
+}
+
+.text-24 {
+  font-size: clamp(1rem, 0.7868rem + 0.4706vw, 1.375rem);
+}
+
+.maroon_bg {
+  background-color: #5D2023;
+}
+.gray_bg{
+  background-color: #ececec;
+}
+.light_white {
+  color: #E4E0E0;
+}
+
+.gray {
+  color: #929292;
+}
+
+.white {
+  color: #ffff;
 }
